2008-7-21  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-14.
    * make all internal function start with .
    * add keyword manip to the docs
    * man/balance: doc for balance().
    * export logit(x) for use.
    * man/array.append: doc for array.append
    * R/array.append: new function to add array to the existing one.
    * R/coefplot: fix when plot=FALSE, should not plot varnames. 
    * R/balanceplot: obsolet!
    * R/balance: new function that computes, print and plot the balance stats

2008-7-16  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-13.
    * R/bayespolr: fix a bug in gmin

2008-7-16  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-12.
    * R/bayespolr: rep start values to have the same length of coef + zeta


2008-7-15  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-11.
    * R/coefplot: add options add=TRUE and epsilon=.1, 
        so coefplot can plot over the existing plot.

2008-7-10  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-10.
    * man/rescale: fix a typo in the example: full2 -> full
    * R/rescale: fix a bug;

2008-7-9  Andrew Gelman  <gelman@stat.columbia.edu>  
    * R/bayesglm: for gaussian family, dispersion <- var(y)/10000

2008-6-23  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-9.
    * R/se.coef: remove trick to show the coef names
    * R/bayesglm: scaled=TRUE --> * sd(y) / sd(x)

2008-6-23  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-8.
    * R/Bayesglm: Clean up redundant code.


2008-6-5  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-8.
    all the lmer2 class-related methods are now mer-class methods.
    all the mer-class methods are obsolete 
    mcmcsamp is obsolet because it is not working in lme4


2008-6-4  Yu-Sung Su     <ys463@columbia.edu>  