@@ -3,12 +3,14 @@
     * make all internal function start with .
     * add keyword manip to the docs
     * man/balance: doc for balance().
+    * man/residual.plot: new function().
     * export logit(x) for use.
     * man/array.append: doc for array.append
     * R/array.append: new function to add array to the existing one.
     * R/coefplot: fix when plot=FALSE, should not plot varnames. 
     * R/balanceplot: obsolet!
     * R/balance: new function that computes, print and plot the balance stats
+    * R/residual.plot: new function().
 
 2008-7-16  Yu-Sung Su     <ys463@columbia.edu>  
     * DESCRIPTION (Version, Date): 1.1-13.
